--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nest-server-api-starter",
   "version": "0.0.1",
-  "description": "",
+  "description": "nestjs express",
   "author": "zhixiangyao",
   "private": true,
   "license": "UNLICENSED",
